--- a/web/themes/custom/drupalhandson/css/style.css
+++ b/web/themes/custom/drupalhandson/css/style.css
@@ -2,3 +2,46 @@
  * If using a CSS pre-processor, tell it to overwrite this file. If not, place
  * your custom CSS modifications here.
  */
+
+
+nav.tabs {
+  margin-bottom: 20px;
+}
+
+div.field--name-field-photo,
+div.field--name-field-image {
+  float: left;
+  margin: 0px 25px 25px 0px;
+}
+
+div.field--type-entity-reference div.field--label {
+  margin: 15px 0px 15px 0px;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+div.field--type-entity-reference div.field--item {
+  background-color: #eee;
+  padding: 10px;
+  border-left: 2px solid #CCC;
+  margin-bottom: 15px;
+}
+
+
+div.customcolum {
+  padding: 15px 15px 30px 15px;
+}
+
+div.customcolum div.views-field {
+  text-align: center !important;
+}
+
+div.customcolum div.views-field-title {
+  padding: 5px;
+  min-height: 15px;
+  margin-bottom: 15px;
+}
+
+div.customcolum div.field-content a img.img-responsive {
+  display: inherit;
+}
